# AniPlay

./: .env.example  .gitignore  README.md  check_organization.py  cleanup_library.py  dryrun_titles.py  migrate_database.py  pyproject.toml  run_aniplay.bat  run_web.bat  setup.bat
aniplay/: config.py  main.py
aniplay/api/: server.py
aniplay/cli/: cleanup.py  org_check.py
aniplay/core/: __init__.py  discord_manager.py  download_manager.py  library_manager.py  online_library_manager.py
aniplay/database/: db.py  models.py
aniplay/ui/: database_browser.py  downloads_widget.py  episode_widget.py  library_manager_widget.py  main_window.py  metadata_manager.py  online_search_widget.py  planner_widget.py  player_widget.py  selection_info_widget.py  series_widget.py  vlc_window.py
aniplay/utils/: ani_scraper.py  anilist_client.py  cleanup_manager.py  db_migrator.py  file_scanner.py  format_utils.py  logger.py  media_analyzer.py  media_matcher.py  nyaa_scraper.py  org_analyzer.py  title_extractor.py
aniplay/web/: index.html  script.js  style.css
tests/: conftest.py  test_anilist_client.py  test_database.py  test_file_scanner.py  test_nyaa_scraper.py
